<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mainmachine.appportfolio.ButtonFragment"
    android:id="@+id/main_fragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView android:layout_width="match_parent" android:layout_height="match_parent" />

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/mainLayout"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:backgroundTint="@color/accent_material_light">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/title_text"
            android:id="@+id/textView"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="136dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="50dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/build_it_button_text"
            android:id="@+id/buildItButton"
            android:textColor="#ffdddddd"
            android:background="#ff78909c"
            android:layout_centerVertical="true"
            android:layout_alignEnd="@+id/spotifyStreamerButton"
            android:layout_alignStart="@+id/spotifyStreamerButton"
            android:layout_marginBottom="15dp"
            android:clickable="true"
            android:onClick="BuildButtonClicked" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xyz_reader_button_text"
            android:id="@+id/xyzReaderButton"
            android:textColor="#ffdddddd"
            android:background="#ff78909c"
            android:layout_below="@+id/buildItButton"
            android:layout_alignEnd="@+id/spotifyStreamerButton"
            android:layout_alignStart="@+id/spotifyStreamerButton"
            android:layout_marginBottom="15dp"
            android:clickable="true"
            android:onClick="XyzButtonClicked" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/capstone_button_text"
            android:id="@+id/capstoneButton"
            android:textColor="#ffdddddd"
            android:background="#ffff3d00"
            android:layout_below="@+id/xyzReaderButton"
            android:layout_alignEnd="@+id/spotifyStreamerButton"
            android:layout_alignStart="@+id/spotifyStreamerButton"
            android:layout_marginBottom="15dp"
            android:clickable="true"
            android:onClick="CapstoneButtonClicked" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/library_app_button_text"
            android:id="@+id/libraryAppButton"
            android:textColor="#ffdddddd"
            android:background="#ff78909c"
            android:layout_above="@+id/buildItButton"
            android:layout_alignEnd="@+id/spotifyStreamerButton"
            android:layout_alignStart="@+id/spotifyStreamerButton"
            android:layout_marginBottom="15dp"
            android:clickable="true"
            android:onClick="LibraryButtonClicked" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scores_app_button_text"
            android:id="@+id/scoresAppButton"
            android:textColor="#ffdddddd"
            android:background="#ff78909c"
            android:layout_above="@+id/libraryAppButton"
            android:layout_alignEnd="@+id/spotifyStreamerButton"
            android:layout_alignStart="@+id/spotifyStreamerButton"
            android:layout_marginBottom="15dp"
            android:clickable="true"
            android:onClick="ScoresButtonClicked" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spotify_streamer_button_text"
            android:id="@+id/spotifyStreamerButton"
            android:textColor="#ffdddddd"
            android:background="#ff78909c"
            android:layout_above="@+id/scoresAppButton"
            android:layout_alignEnd="@+id/textView"
            android:layout_alignStart="@+id/textView"
            android:layout_marginBottom="15dp"
            android:clickable="true"
            android:onClick="SpotifyButtonClicked" />

    </RelativeLayout>

</FrameLayout>
